--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-    <title>Bootstrap</title>
+    <title>StartUP</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -18,7 +19,7 @@
             <div class="row">
                 <div class="col-lg-12 my-auto">
                     <h1 class="text-uppercase red">
-                        <strong>the biggest startup event of the year</strong>
+                        <strong>YES, THE BIGGEST STARTUP EVENT FOR THE YEAR IS COMING</strong>
                     </h1>
                     <hr>
                 </div>
