--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link  href="css/style.css" rel="stylesheet"> 
 
 </head>
 
@@ -19,12 +19,30 @@
             <div class="row">
                 <div class="col-lg-12 my-auto">
                     <h1 class="text-uppercase red">
-                        <strong>YES, THE BIGGEST STARTUP EVENT FOR THE YEAR IS COMING</strong>
+                        <strong>web dev even is coming, get prepared</strong>
                     </h1>
                     <hr>
                 </div>
                 <div class="col-lg-12 my-auto">
-                    <button class="btn btn-primary btn-xl">Find Out More</button>
+                    <!-- Begin Mailchimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{ clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="https://github.us4.list-manage.com/subscribe/post?u=21746346fe666185ecb764e59&amp;id=b62a50c66a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+        <button class="btn btn-primary btn-xl">SUBSCRIBE</button>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_21746346fe666185ecb764e59_b62a50c66a" tabindex="-1" value=""></div>
+    
+</form>
+</div>
+
+<!--End mc_embed_signup-->
+                    
                 </div>
             </div>
         </div>
