--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="col-lg-12 my-auto">
                     <h1 class="text-uppercase red">
-                        <strong>web dev even is coming, get prepared</strong>
+                        <strong>web dev event is coming, get prepared</strong>
                     </h1>
                     <hr>
                 </div>
