--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
 <div id="mc_embed_signup">
 <form action="https://github.us4.list-manage.com/subscribe/post?u=21746346fe666185ecb764e59&amp;id=b62a50c66a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-        <button class="btn btn-primary btn-xl" align-text="text-center">FIND OUR MORE</button>
+        <button class="btn btn-primary btn-xl">FIND OUR MORE</button>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_21746346fe666185ecb764e59_b62a50c66a" tabindex="-1" value=""></div>
-    
     
 </form>
 </div>
