--- a/aauhelp/index.html
+++ b/aauhelp/index.html
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.php">AAU | STUDENTS HELPDESK</a>
+                <a class="navbar-brand" href="index.html">AAU | STUDENTS HELPDESK</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
