--- a/dav_lay/index.html
+++ b/dav_lay/index.html
@@ -195,7 +195,7 @@
 
      <!--  FOOTER-->
      <footer>
-        <p>Layouts Designed and Structured by Davison Isesele</p>
+        <p>Layouts Designed and Structured by <a href="facebook.com/sirdav.anthony"> Davison Isesele</a> </p>
     </footer>
 </body>
 </html>
